# UCWO

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  rand_put_bench.cc  test.cc  ucwo.cc  ucwo.hh  ucxctrl.cc  ucxctrl.hh
include/: ucwo.hh
src/: hello.cc  hello_cuda.cu  put_bench.cc  rand_get_cuda.cc  rand_put_bench.cc  rand_put_cuda.cc  timer.hh  ucwo.cc
